--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 			<div class="accordion-item">
 				<input class="accordion-item__input" type="radio" name="accordion" id="accordion-4">
 				<label class="accordion-item__trigger" for="accordion-4">
-					Work-life balance
+					Dude, where is JS?
 				</label>
 				<div class="accordion-item__content">
-					<img src="./Снимок экрана 2023-03-11 214156.jpg" alt="" class="img">
+					<img src="./Снимок экрана 2023-03-11 214225.jpg" alt="" class="img">
 				</div>
 			</div>
 
