--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 				<input class="accordion-item__input" type="radio" name="accordion" id="accordion-1">
 				<label class="accordion-item__trigger" for="accordion-1">
 					You can't just copy and paste CSS
+					<div class="accordion-svg">
+						<img src="./accordion_btn.svg" alt="">
+					</div>
 				</label>
 				<div class="accordion-item__content">
-
 					<img src="./Снимок экрана 2023-03-11 214039.jpg" alt="" class="img">
-
 				</div>
 			</div>
 
@@ -33,6 +34,9 @@
 				<input class="accordion-item__input" type="radio" name="accordion" id="accordion-2">
 				<label class="accordion-item__trigger" for="accordion-2">
 					Keep calm and carry on
+					<div class="accordion-svg">
+						<img src="./accordion_btn.svg" alt="">
+					</div>
 				</label>
 				<div class="accordion-item__content">
 					<img src="./Снимок экрана 2023-03-11 214116.jpg" alt="" class="img">
@@ -43,6 +47,9 @@
 				<input class="accordion-item__input" type="radio" name="accordion" id="accordion-3">
 				<label class="accordion-item__trigger" for="accordion-3">
 					Work-life balance
+					<div class="accordion-svg">
+						<img src="./accordion_btn.svg" alt="">
+					</div>
 				</label>
 				<div class="accordion-item__content">
 					<img src="./Снимок экрана 2023-03-11 214156.jpg" alt="" class="img">
@@ -53,6 +60,9 @@
 				<input class="accordion-item__input" type="radio" name="accordion" id="accordion-4">
 				<label class="accordion-item__trigger" for="accordion-4">
 					Dude, where is JS?
+					<div class="accordion-svg">
+						<img src="./accordion_btn.svg" alt="">
+					</div>
 				</label>
 				<div class="accordion-item__content">
 					<img src="./Снимок экрана 2023-03-11 214225.jpg" alt="" class="img">
